--- a/examples/meshing_ml.html
+++ b/examples/meshing_ml.html
@@ -59,17 +59,11 @@
       const terrainMaterial = new THREE.ShaderMaterial({
         uniforms: {},
         vertexShader: `\
+          attribute vec3 barycentric;
           varying vec3 vPosition;
           varying vec3 vBC;
           void main() {
-            float m = mod(gl_VertexID, 3.0);
-            if (m < 0.5) {
-              vBC = vec3(1.0, 0.0, 0.0);
-            } else if (m < 1.5) {
-              vBC = vec3(0.0, 1.0, 0.0);
-            } else {
-              vBC = vec3(0.0, 0.0, 1.0);
-            }
+            vBC = barycentric;
             vec4 modelViewPosition = modelViewMatrix * vec4(position, 1.0);
             vPosition = modelViewPosition.xyz;
             gl_Position = projectionMatrix * modelViewPosition;
@@ -131,7 +125,7 @@
         const attributes = renderer.getAttributes();
 
         const positions = new Float32Array(count*3);
-        const normals = new Float32Array(count*3);
+        const barycentrics = new Float32Array(count*3);
         for (let i = 0; i < count; i += 3) {
           const ai = indexArray[i];
           const bi = indexArray[i+1];
@@ -152,18 +146,18 @@
           positions[baseIndex+7] = positionArray[baseC+1];
           positions[baseIndex+8] = positionArray[baseC+2];
 
-          /* normals[baseIndex] = normalArray[baseA];
-          normals[baseIndex+1] = normalArray[baseA+1];
-          normals[baseIndex+2] = normalArray[baseA+2];
-          normals[baseIndex+3] = normalArray[baseB];
-          normals[baseIndex+4] = normalArray[baseB+1];
-          normals[baseIndex+5] = normalArray[baseB+2];
-          normals[baseIndex+6] = normalArray[baseC];
-          normals[baseIndex+7] = normalArray[baseC+1];
-          normals[baseIndex+8] = normalArray[baseC+2]; */
+          barycentrics[baseIndex] = 1;
+          barycentrics[baseIndex+1] = 0;
+          barycentrics[baseIndex+2] = 0;
+          barycentrics[baseIndex+3] = 0;
+          barycentrics[baseIndex+4] = 1;
+          barycentrics[baseIndex+5] = 0;
+          barycentrics[baseIndex+6] = 0;
+          barycentrics[baseIndex+7] = 0;
+          barycentrics[baseIndex+8] = 1;
         }
         geometry.addAttribute('position', new THREE.BufferAttribute(positions, 3));
-        // geometry.addAttribute('normal', new THREE.BufferAttribute(normals, 3));
+        geometry.addAttribute('barycentric', new THREE.BufferAttribute(barycentrics, 3));
       };
       const _removeTerrainMesh = terrainMesh => {
         scene.remove(terrainMesh);
