--- a/examples/tutorial.html
+++ b/examples/tutorial.html
@@ -344,37 +344,68 @@
 
     (async () => {
       console.log('request device');
-      display = await navigator.xr.requestDevice();
+
+      if (navigator.xr) {
+        display = await navigator.xr.requestDevice();
+
+        if (display) {
+          console.log('request session');
+          const session = await display.requestSession({
+            exclusive: true,
+          });
+          display.session = session;
+
+          // console.log('request first frame');
+          session.requestAnimationFrame((timestamp, frame) => {
+            renderer.vr.setSession(session, {
+              frameOfReferenceType: 'stage',
+            });
+
+            const viewport = session.baseLayer.getViewport(frame.views[0]);
+            const width = viewport.width;
+            const height = viewport.height;
+
+            renderer.setSize(width * 2, height);
+
+            renderer.setAnimationLoop(null);
+
+            renderer.vr.enabled = true;
+            renderer.vr.setDevice(display);
+            renderer.vr.setAnimationLoop(animate);
+
+            console.log('running!');
+          });
+        } else {
+          renderer.setAnimationLoop(animate);
+        }
+      } else {
+        console.log('no xr displays');
+      }
+    } else { // WebVR
+      console.log('request device');
+      const displays = await navigator.getVRDisplays();
+      display = displays[0];
 
       if (display) {
-        console.log('request session');
-        const session = await display.requestSession({
-          exclusive: true,
-        });
-        display.session = session;
+        console.log('request present');
+        await display.requestPresent([
+          {
+            source: renderer.domElement,
+          }
+        ]);
+        console.log('entered vr');
 
-        // console.log('request first frame');
-        session.requestAnimationFrame((timestamp, frame) => {
-          renderer.vr.setSession(session, {
-            frameOfReferenceType: 'stage',
-          });
+        display.layers = layers;
 
-          const viewport = session.baseLayer.getViewport(frame.views[0]);
-          const width = viewport.width;
-          const height = viewport.height;
+        const {renderWidth: width, renderHeight: height} = display.getEyeParameters('left');
+        renderer.setSize(width * 2, height);
 
-          renderer.setSize(width * 2, height);
-
-          renderer.setAnimationLoop(null);
-
-          renderer.vr.enabled = true;
-          renderer.vr.setDevice(display);
-          renderer.vr.setAnimationLoop(animate);
-
-          console.log('running!');
-        });
+        renderer.setAnimationLoop(null);
+        renderer.vr.enabled = true;
+        renderer.vr.setDevice(display);
+        renderer.vr.setAnimationLoop(animate);
       } else {
-        renderer.setAnimationLoop(animate);
+        console.log('no vr displays');
       }
     })()
       .catch(err => {
