--- a/examples/realitytabs.html
+++ b/examples/realitytabs.html
@@ -900,7 +900,7 @@ for (let i = 0; i < controllerMeshes.length; i++) {
   scene.add(controllerMesh);
   controllerMeshes[i] = controllerMesh;
 }
-const _getControllerIndex = inputSource => inputSource.handedness === 'left' ? 0 : 1;
+const _getControllerIndex = gamepad => gamepad.hand === 'left' ? 0 : 1;
 
 // rig
 
@@ -1870,24 +1870,20 @@ function animate(time, frame) {
   const timeDiff = now - lastTime;
   const startTimeDiff = now - startTime;
 
-  const inputSources = display.session.getInputSources();
-  for (let i = 0; i < inputSources.length; i++) {
+  const gamepads = navigator.getGamepads();
+  for (let i = 0; i < gamepads.length; i++) {
+    const gamepad = gamepads[i];
     const moveTab = moves[i];
     const boxMesh = boxMeshes[i];
 
     if (moveTab) {
-      const inputSource = inputSources[i];
-      const pose = frame.getInputPose(inputSource);
       const {iframe} = moveTab;
 
-      const gamepads = navigator.getGamepads();
-      const gamepad = gamepads[i];
       const scrollFactor = scrollFactors[i];
       const scaleFactor = scaleFactors[i];
 
-      localMatrix
-        .fromArray(pose.targetRay.transformMatrix)
-        .decompose(localVector, localQuaternion, localVector2);
+      localVector.fromArray(gamepad.pose.position);
+      localQuaternion.fromArray(gamepad.pose.orientation);
       localVector
         .add(
           localVector2.set(0, 0, -scrollFactor)
@@ -1924,14 +1920,13 @@ function animate(time, frame) {
         controllerMeshes[i].visible = false;
       }
 
-      for (let i = 0; i < inputSources.length; i++) {
-        const inputSource = inputSources[i];
-        const pose = frame.getInputPose(inputSource);
+      for (let i = 0; i < gamepads.length; i++) {
+        const gamepad = gamepads[i];
 
-        const controllerIndex = _getControllerIndex(inputSource);
+        const controllerIndex = _getControllerIndex(gamepad);
         const controllerMesh = controllerMeshes[controllerIndex];
-        controllerMesh.matrix.fromArray(pose.targetRay.transformMatrix);
-        controllerMesh.matrix.decompose(controllerMesh.position, controllerMesh.quaternion, controllerMesh.scale);
+        controllerMesh.position.fromArray(gamepad.pose.position);
+        controllerMesh.quaternion.fromArray(gamepad.pose.orientation);
         controllerMesh.updateMatrixWorld(true);
         controllerMesh.visible = true;
       }
@@ -2301,12 +2296,8 @@ function animate(time, frame) {
                           const tab = tabs[menuMesh.listMesh.scrollIndex + j];
                           moves[i] = tab;
 
-                          const inputSources = display.session.getInputSources();
-                          const inputSource = inputSources[i];
-                          const pose = frame.getInputPose(inputSource);
-                          localMatrix
-                            .fromArray(pose.targetRay.transformMatrix)
-                            .decompose(localVector, localQuaternion, localVector2);
+                          localVector.fromArray(gamepad.pose.position);
+                          localQuaternion.fromArray(gamepad.pose.orientation);
                           const distance = localVector
                             .distanceTo(
                               localVector2
@@ -2521,11 +2512,7 @@ function animate(time, frame) {
 
   const _updateButtons = () => {
     if (display) {
-      const inputSources = display.session.getInputSources();
-      const gamepads = navigator.getGamepads();
-
-      for (let i = 0; i < inputSources.length; i++) {
-        const inputSource = inputSources[i];
+      for (let i = 0; i < gamepads.length; i++) {
         const gamepad = gamepads[i];
 
         {
